20250429 abstract, casting done

--- a/learning_log/20250428.md
+++ b/learning_log/20250428.md
@@ -60,9 +60,9 @@
 ----------------------
 ### Wrapper class(int와 Integer)
 - int != Integer
-int는 기본 자료형에 해당 primitve type   
-Integer는 정수 관련한 field 및 method들을 모아둔 class에 해당
-- char 자료형들의 특징들을 모아서 field / method들을 정의해둔 것이 **_String_**
+int는 기본 자료형에 해당 primitive type   
+Integer는 정수 관련한 field 및 method 들을 모아둔 class에 해당
+- char 자료형들의 특징들을 모아서 field / method 들을 정의해둔 것이 **_String_**
 
 
 # 상속(inheritance) {
